Fix auth isses and add validate token API
